feat: admin setting k-receipt deduction
