# docs/swagger.json
@@ -8,6 +8,61 @@
     },
     "basePath": "/",
     "paths": {
+        "/admin/deductions/k-receipt": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.updateTaxDeductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/admin.updateKReceiptDeductResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError-array_validator_Field"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError-string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError-string"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/deductions/personal": {
             "post": {
                 "security": [
@@ -51,13 +106,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/http.ResponseError-string"
+                            "$ref": "#/definitions/github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.ResponseError-string"
+                            "$ref": "#/definitions/github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string"
                         }
                     }
                 }
@@ -101,13 +156,61 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/http.ResponseError-string"
+                            "$ref": "#/definitions/github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.ResponseError-string"
+                            "$ref": "#/definitions/github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string"
+                        }
+                    }
+                }
+            }
+        },
+        "/tax/calculations/upload-csv": {
+            "post": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tax"
+                ],
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": " ",
+                        "name": "taxFile",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/tax.texes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.ResponseError-array_validator_Field"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string"
                         }
                     }
                 }
@@ -163,6 +266,14 @@
         }
     },
     "definitions": {
+        "admin.updateKReceiptDeductResponse": {
+            "type": "object",
+            "properties": {
+                "kReceipt": {
+                    "type": "number"
+                }
+            }
+        },
         "admin.updatePersonalDeductResponse": {
             "type": "object",
             "properties": {
@@ -177,6 +288,20 @@
                 "amount": {
                     "type": "number",
                     "minimum": 0
+                }
+            }
+        },
+        "github.com_wit-switch_assessment-tax_internal_handler_http.ResponseError-string": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "errors": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         },
@@ -197,20 +322,6 @@
                 }
             }
         },
-        "http.ResponseError-string": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "errors": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "tax.allowance": {
             "type": "object",
             "required": [
@@ -225,6 +336,23 @@
                     "type": "number",
                     "minimum": 0,
                     "example": 200000
+                }
+            }
+        },
+        "tax.taxCSV": {
+            "type": "object",
+            "required": [
+                "allowanceType"
+            ],
+            "properties": {
+                "tax": {
+                    "type": "number"
+                },
+                "taxRefund": {
+                    "type": "number"
+                },
+                "totalIncome": {
+                    "type": "number"
                 }
             }
         },
@@ -292,28 +420,6 @@
                 },
                 "tax": {
                     "type": "number"
-                }
-            }
-        },
-        "tax.texes": {
-            "type": "object",
-            "properties": {
-                "texes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tax.taxCSV"
-                    }
-                }
-            }
-        },
-        "tax.texes": {
-            "type": "object",
-            "properties": {
-                "texes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tax.taxCSV"
-                    }
                 }
             }
         },
